terraform/aws/components/base/sg_rules_core.tf
resource "aws_security_group_rule" "core_to_internet_443" {
  type = "egress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  security_group_id = aws_security_group.core_sg.id
  cidr_blocks = ["0.0.0.0/0"]
}
